refactor sonarlint